--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import '@fontsource/sn-pro/300.css';
+@import '@fontsource/sn-pro/400.css';
+@import '@fontsource/sn-pro/500.css';
+@import '@fontsource/sn-pro/600.css';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
