--- a/src/app/character/component/card-character/card-character.component.html
+++ b/src/app/character/component/card-character/card-character.component.html
@@ -8,8 +8,11 @@
         <h3 class="text-2xl font-semibold text-nowrap text-ellipsis overflow-hidden">{{ character.name }}</h3>
         <div class="flex gap-2 justify-center items-center">
           <app-status-character [status]="character.status" />
-          <span>{{ character.status | titlecase }} - </span>
-          <span>{{ character.species }}</span>
+          <p class="flex gap-2 justify-center items-center">
+            <span>{{ character.status | titlecase }}</span>
+            <span>-</span>
+            <span>{{ character.species }}</span>
+          </p>
         </div>
       </div>
       <!-- <div class="flex flex-col">
