feat:add single character page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
+<section class="rounded-lg flex gap-4 items-center mb-4">
+  <app-logo />
+  <h1 class="text-white text-4xl font-bold">Rick & Morthy</h1>
+</section>
 <router-outlet />
