--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<section class="rounded-lg flex gap-4 items-center mb-4">
+<section [routerLink]="['/']" class="group w-fit mx-auto rounded-lg flex gap-4 items-center my-10 justify-center cursor-pointer">
   <app-logo />
-  <h1 class="text-white text-4xl font-bold">Rick & Morthy</h1>
+  <h1 class=" text-white text-4xl font-bold">Rick & Morthy</h1>
 </section>
 <router-outlet />
