feat: add episode component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<section [routerLink]="['/']" class="group w-fit mx-auto rounded-lg flex gap-4 items-center my-10 justify-center cursor-pointer">
+<section [routerLink]="['/']" class="group w-fit mx-auto rounded-lg flex gap-4 items-center my-5 justify-center cursor-pointer md:my-10">
   <app-logo />
   <h1 class=" text-white text-4xl font-bold">Rick & Morthy</h1>
 </section>
