--- a/src/app/character/page/character-page/character-page.component.html
+++ b/src/app/character/page/character-page/character-page.component.html
@@ -1,15 +1,17 @@
-<section class="group relative rounded-lg rounded-tr-none bg-slate-200 mx-2 p-6 my-10 grid gap-8 grid-flow-row grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 lg:mx-0">
+<section class="group relative rounded-lg rounded-tr-none bg-slate-200 mx-2 my-10 grid gap-8 grid-flow-row grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 lg:gap-10 lg:mx-0">
 
   <a [routerLink]="['/']" aria-label="Back" class="absolute bg-slate-200 size-12 p-4 grid place-items-center rounded-full -top-6 right-0 z-10
       before:absolute before:size-10 before:bg-neutral before:rounded-full before:custom-clip-path before:hover:bg-rainbow">
   </a>
 
   @if (character) {
-  <img [src]="character.image" [alt]="character.name" class="size-full object-cover object-center"
-       [style]="{'view-transition-name': 'character'.concat(character.id.toString()) }">
+  <div class="sm:pl-8 sm:pt-8 lg:py-0 lg:pl-0">
+    <img [src]="character.image" [alt]="character.name" class="size-full bg-red-500 rounded-t-lg object-cover object-center sm:rounded-b-lg lg:rounded-r-none"
+         [style]="{'view-transition-name': 'character'.concat(character.id.toString()) }">
+  </div>
 
-  <div class="self-center space-y-3">
-    <h2 class="font-bold text-3xl">{{ character.name | uppercase}}</h2>
+  <div class="self-center space-y-3 px-8 sm:px-0 sm:py-8">
+    <h2 class="text-center font-bold text-3xl text-neutral sm:text-left">{{ character.name | uppercase}}</h2>
     <ul class="space-y-2 text-lg">
       <li class="flex gap-2 items-center">
         <span class="font-medium text-gray-600">Status: </span>
@@ -49,19 +51,8 @@
     </ul>
   </div>
 
-  <div class="space-y-1 self-center sm:col-span-2 md:col-span-2">
-    <h3 class="font-bold text-2xl">Last 10 Episodes</h3>
-    <ul class="flex flex-col gap-1 font-medium">
-
-      @for (episode of episodes; track episode.id) {
-        <li class="block">
-          <span class="text-gray-600">{{ episode.episode }}</span> -
-          <span>{{ episode.name }}</span>
-          <span class="text-gray-600"> ( {{ episode.air_date | date:'dd MMMM yyyy' }} )</span>
-        </li>
-      }
-
-    </ul>
+  <div class="space-y-1 self-center pb-8 px-8 sm:col-span-2 md:col-span-2 lg:pl-0 lg:pt-8">
+    <app-episode [episodes]="episodes" />
   </div>
 
   }
