--- a/src/app/episode/component/episode/episode.component.html
+++ b/src/app/episode/component/episode/episode.component.html
@@ -1,5 +1,5 @@
 <div class="w-full">
-  <h3 class="font-bold text-2xl">Last 10 Episodes</h3>
+  <h3 class="font-bold text-2xl mb-3">Last 10 Episodes</h3>
   <ul class="font-medium space-y-2">
 
     @for (episode of episodes; track episode.id) {
