--- a/src/app/shared/page/home-page/home-page.component.html
+++ b/src/app/shared/page/home-page/home-page.component.html
@@ -1,8 +1,8 @@
-<section class="mx-2 my-4">
+<section class="grid place-items-center mx-2 mb-10">
   <input
     type="text"
     placeholder="Search character by name"
-    class="rounded-lg px-4 py-2"
+    class="w-full rounded-lg px-3 py-2 ring ring-gray-400 sm:w-72"
     [formControl]="searchCharacter"
   >
 </section>
